--- a/examples/index.html
+++ b/examples/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NLDs Activity Parser</title>
     <link rel="stylesheet" href="style.css" />
-    <script type="module" crossorigin src="https://unpkg.com/@github/relative-time-element@5.0.0/dist/index.js"></script>
+    <script
+      type="module"
+      crossorigin
+      src="https://unpkg.com/@github/relative-time-element@5.0.0/dist/index.js"
+    ></script>
   </head>
   <body>
     <div id="app"></div>
@@ -28,8 +32,6 @@
           minute: now.getMinutes(),
         };
       }
-
-      const flags = getDateTime();
 
       customElements.define(
         "duration-format",
@@ -121,7 +123,7 @@
               this.render();
             }
           }
-          
+
           render() {
             const { date, time } = this._dateTime;
             const dateTime = new Date(`${date} ${time}`);
@@ -131,9 +133,13 @@
         },
       );
 
-      Elm.Main.init({
+      const app = Elm.Main.init({
         node: document.getElementById("app"),
-        flags: flags,
+        flags: getDateTime(),
+      });
+
+      app.ports.elmRequestedDateTime.subscribe((input) => {
+        app.ports.jsSentDateTime.send(getDateTime());
       });
     </script>
   </body>
